--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
+.box {
+  height: 500;
+  background-color: lightskyblue;
+  text-align: center;
+  font-family: cursive;
+}
+
+.dayLight {
+  background-color: rgb(233, 233, 98);
+}
+
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  text-align: right;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+button {
+  
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  height: 40px;
+  margin: 15px;
+  background-color: pink;
 }
